# pitch-pilot

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
app/: README.md
architecture/: index.html
changelog/: index.html
components/clients/: index.html
components/evals/: index.html
components/graph/: index.html
components/nodes/: index.html
components/storage/: index.html
configuration/: index.html
data-models/: index.html
decisions/: index.html
docs/: architecture.md  configuration.md  data-models.md  decisions.md  evals.md  getting-started.md  glossary.md  groundedness.md  index.md  limitations.md  pipeline.md  roadmap.md
docs/components/: clients.md  evals.md  graph.md  nodes.md  storage.md
docs/validation/: p1-research-audit.md
evals/: README.md  __init__.py  index.html  metrics.py  run_eval.py
evals/reports/: eval-2026-06-13.md  eval-2026-06-14-original17-after.md  eval-2026-06-14.md
examples/: eval_companies.json  eval_companies_holdout.json  eval_icp.json  icp.sample.json
getting-started/: index.html
glossary/: index.html
groundedness/: index.html
limitations/: index.html
pipeline/: index.html
reference/SUMMARY/: index.html
reference/pitch_pilot/: index.html
reference/pitch_pilot/cli/: index.html
roadmap/: index.html
scripts/: gen_ref_pages.py  validate_p1_research.py
search/: search_index.json
src/pitch_pilot/: __init__.py  cli.py  config.py
tests/: test_clients.py  test_config.py  test_draft.py  test_evals.py  test_models.py  test_pipeline.py  test_qualify.py  test_research.py  test_scaffold.py  test_verify.py
validation/p1-research-audit/: index.html
(+49 files in other folders)
